# atividade-extensionista-uninter

./: .gitignore  README.md  app.py  pyproject.toml
atividade_extensionista_uninter/: stats_extract.py
corpus/: lexico_v3.0.txt
